--- a/town_hall_1/styles/c8_main.css
+++ b/town_hall_1/styles/c8_main.css
@@ -9,7 +9,8 @@ html {
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    width: 800px;
+    width: 98%;
+	max-width: 960px;
     margin: 0 auto;
     border: 3px solid #931420;
     background-color: #fffded;
@@ -40,12 +41,16 @@ header h3 {
 }
 header img {
 	float: left;
-	padding: 0 30px;
+	padding: 0 3.125%;
 }
 .shadow {
 	text-shadow: 2px 2px 2px #800000;
 }
 /* the styles for the navigation menu */
+#mobile_menu {
+	display: none;
+}
+
 #nav_menu ul {
 	list-style-type: none;
 	margin: 0;
@@ -54,10 +59,10 @@ header img {
 }
 #nav_menu ul li {
 	float: left;
+	width: 20%;
 }
 #nav_menu ul li a {
     display: block;
-    width: 160px;
     text-align: center;
     padding: 1em 0;
     text-decoration: none;
@@ -72,6 +77,7 @@ header img {
     display: none;
     position: absolute;
     top: 100%;
+	width: 100%;
 }
 #nav_menu ul ul li {
 	float: none;
@@ -87,9 +93,9 @@ header img {
 
 /* the styles for the section */
 section {
-	width: 525px;
+	width: 75%; 
 	float: right;
-	padding: 0 20px 20px 20px;
+	padding: 0 2.08333333333% 20px 2.08333333333%;
 }
 section h1 {
 	font-size: 150%;
@@ -130,6 +136,8 @@ article h3 {
 	padding-bottom: .25em;
 }
 article img {
+	min-width: 150px;
+	max-width: 40%;
 	float: right;
 	margin: .5em 0 1em 1em;
 	border: 1px solid black;
@@ -137,9 +145,8 @@ article img {
 
 /* the styles for the aside */
 aside {
-	width: 215px;
-	float: right;
-	padding: 0 0 20px 20px;
+	width: 25%; 
+	padding: 0 0 20px 2.08333333333%;
 }
 aside h2 {
 	color: #800000;
@@ -165,4 +172,69 @@ footer p {
 	text-align: center;
 	color: white;
 	padding: 1em 0;
+}
+
+
+/* media queries */
+@media only screen and (max-width: 700px) {
+	aside h3 a {
+		font-size: 85%;
+	}
+
+	section h1 {
+		font-size: 125%;
+	}
+
+	section h2, aside h2 {
+		font-size: 110%;
+	}
+}
+
+@media only screen and (max-width: 600px) {
+	header img {
+		float: none;
+	}
+
+	header {
+		text-align: center;
+	}
+
+	section, aside {
+		float: none;
+	}
+
+	aside {
+		padding-right: 2.08333333333%;
+		width: calc(100% - 2.08333333333%);
+	}
+
+	section {
+		width: calc(100% - (2.08333333333% * 2));
+	}
+
+	article img {
+		max-width: 30%;
+	}
+
+	#nav_menu {
+		display: none;
+	}
+
+	#mobile_menu {
+		display: block;
+	}
+
+	.slicknav_menu {
+		background-color: #800000 !important;
+	}
+
+	aside div {
+		column-count: 2;
+	}
+}
+
+@media only screen and (max-width: 435px) {
+	:root {
+		font-size: 90%;
+	}
 }
